--- a/Biblioteca-Digital/src/main/resources/application.properties
+++ b/Biblioteca-Digital/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-# Configuración de la base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca_digital?useTimezone=true&serverTimezone=GMT-3&characterEncoding=UTF-8
+# Configuration database
+spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca_digital
 spring.datasource.username= root
 spring.datasource.password= admin
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 
-# Configuración de Hibernate
+# Configuration Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.format_sql=true
 
 #Thymeleaf
 spring.thymeleaf.cache= false
